@@ -1,5 +1,6 @@
 ===== 1.9.3 (Nov ??, 2013) =====
 * Updated Chinese localization by Chris Yu
+* Updated Catalan localization (by Alfonso Montero)
 
 ===== 1.9.2 (Nov 02, 2013) =====
 * Fixed adding of new books to the library
